# trendX

./: .gitignore  CHANGELOG.md  app.py  pyproject.toml
config/: default.yaml
data/: opportunities.json
docs/: layer2-dashboard-prompt.md  layer3-content-factory-prompt.md
tests/: test_classify.py  test_cluster.py  test_detect.py  test_ingest.py  test_proxy.py  test_score.py
tests/fixtures/: hn_item_41000001.json  hn_topstories.json  reddit_comments.json  reddit_rising.json
trendx/: __init__.py  __main__.py  cli.py  config.py  daemon.py  proxy.py
trendx/classify/: classifier.py  prompts.py
trendx/cluster/: clusterer.py
trendx/deliberate/: __init__.py  auto_eval.py  deliberator.py  prompts.py
trendx/detect/: deltas.py  patterns.py
trendx/ingest/: base.py  google_trends.py  hackernews.py  producthunt.py  quora.py  reddit.py  twitter.py  youtube.py
trendx/score/: market.py  rice.py  scorer.py
trendx/store/: db.py  export.py
trendx/velocity/: __init__.py  tracker.py
